fix: :bug: Overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,9 @@
   }
 
 }
-
+div::-webkit-scrollbar{
+  display: none;
+}
 ::-webkit-scrollbar {
   width: 6px;
   background-color: #191627;
